...
}

@Composable
private fun RangeTitle(title: String, modifier: Modifier) {
    Text(
        text = title,
        modifier = modifier.testTag("calendar_range_title").semantics { heading() },
        color = MaterialTheme.colorScheme.onSurface,
        style = MaterialTheme.typography.titleLarge
    )
}

@Composable
...
